--- a/FoodDelivery.DesktopUI/App.xaml
+++ b/FoodDelivery.DesktopUI/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="FoodDelivery.DesktopUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converter="clr-namespace:FoodDelivery.DesktopUI.Helpers"
              xmlns:local="clr-namespace:FoodDelivery.DesktopUI">
     <Application.Resources>
         <ResourceDictionary>
@@ -17,6 +18,7 @@
                 <ResourceDictionary Source="Resources/MenuStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converter:ProductIdToNameConverter x:Key="idConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
