--- a/FoodDelivery.DesktopUI/App.xaml
+++ b/FoodDelivery.DesktopUI/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
                 <ResourceDictionary Source="Resources/Styles.xaml" />
                 <ResourceDictionary Source="Resources/MenuStyles.xaml" />
+                <ResourceDictionary Source="Resources/UserManagerStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converter:ProductIdToNameConverter x:Key="idConverter" />
