--- a/FoodDelivery.DesktopUI/App.xaml
+++ b/FoodDelivery.DesktopUI/App.xaml
@@ -20,6 +20,7 @@
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converter:ProductIdToNameConverter x:Key="idConverter" />
+            <converter:StaffIdToNameConverter x:Key="staffIdConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
