--- a/FoodDelivery.DesktopUI/Views/OrderDisplayView.xaml
+++ b/FoodDelivery.DesktopUI/Views/OrderDisplayView.xaml
@@ -76,9 +76,14 @@
                     <TextBlock Text="{Binding Order.TotalCost, Mode=TwoWay, StringFormat={}{0} руб.}" Margin="10 0" FontSize="30"/>
                 </StackPanel>
 
-                <Button x:Name="Confirm" Content="Confirm" FontSize="20" 
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button x:Name="Confirm" Content="Confirm" FontSize="20" 
                         Style="{StaticResource SquareButtonStyle}" MinWidth="200"
                         Margin="20" HorizontalAlignment="Center"/>
+                    <Button x:Name="Cancel" Content="Cancel" FontSize="20" Foreground="Red" 
+                        Style="{StaticResource SquareButtonStyle}" MinWidth="100"
+                        Margin="20" HorizontalAlignment="Center"/>
+                </StackPanel>
 
 
 
